--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="col-2 ">Email</div>
         </div>
         <div class="row border-1 border border-black">
-            <div class="col-2 ">Sassy</div>
+            <div class="col-2 "><a href="john.html">john</a></div>
             <div class="col-2 ">Villanueva</div>
             <div class="col-2 ">Santos</div>
             <div class="col-2 ">Jan</div>
@@ -32,7 +32,7 @@
             <div class="col-2 ">Sassy@gmailcom</div>
         </div>
         <div class="row border border-1 border-black ">
-            <div class="col-2 ">Cali</div>
+            <div class="col-2 "><a href="rodney.html">Rodney</a></div>
             <div class="col-2 ">Villanueva</div>
             <div class="col-2 ">Santos</div>
             <div class="col-2 ">Jan</div>
@@ -104,7 +104,6 @@
             <div class="col-2 ">20</div>
             <div class="col-2 ">Joaquin@gmailcom</div>
         </div>
-
     </div>
     <!-- Bootstrap Javascript  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
