--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="container table-bordered text-center mt-5 ">
         <h1>List of Students</h1>
         <div class="row fw-bolder border border-1 border-black ">
-            <div class="col-2 ">First name</div>
-            <div class="col-2 ">Middle name</div>
+            <div class="col-2 ">First Name</div>
+            <div class="col-2 ">Middle Name</div>
             <div class="col-2 ">Last name</div>
             <div class="col-2 ">Birthday</div>
             <div class="col-2 ">Age</div>
